--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,11 +19,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ "/" | relative_url }}">ProjectName</a>
+          <a class="navbar-brand" href="{{ "/" | relative_url }}">Faithlife.Utility.Dapper</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
-            <li><a href="{{ "/ProjectName" | relative_url }}">Reference</a></li>
+            <li><a href="{{ "/Faithlife.Utility.Dapper" | relative_url }}">Reference</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/"><img src="{{ "/assets/faithlife.png" | relative_url }}" class="faithlife-logo"></a></li>
@@ -32,9 +32,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img src="{{ "/assets/github.png" | relative_url }}" class="navbar-logo"> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="https://github.com/Faithlife/RepoName">View Source Code</a></li>
-                <li><a href="https://github.com/Faithlife/RepoName/blob/master/LICENSE">View License</a></li>
-                <li><a href="https://github.com/Faithlife/RepoName/blob/docs/{{ page.path }}">Edit This Page</a></li>
+                <li><a href="https://github.com/Faithlife/DapperUtility">View Source Code</a></li>
+                <li><a href="https://github.com/Faithlife/DapperUtility/blob/master/LICENSE">View License</a></li>
+                <li><a href="https://github.com/Faithlife/DapperUtility/blob/docs/{{ page.path }}">Edit This Page</a></li>
               </ul>
             </li>
           </ul>
